athena/ntfy/overlays/production/replica_count.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ntfy-stateful
  labels:
    app: ntfy-stateful
spec:
  replicas: 1
